--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -82,3 +82,22 @@ p {
   margin: 0 auto;
   padding: 1rem 0;
 }
+
+@media only screen and (max-width: 428px) {
+  .mobile-only {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 429px) {
+  .wrapper {
+    display: none;
+  }
+  .mobile-only {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
