--- a/frontend/src/components/LoadingScreen/LoadingScreen.css
+++ b/frontend/src/components/LoadingScreen/LoadingScreen.css
@@ -1,11 +1,54 @@
-.loader {
-    height: 100vh;
-}
 
-.splash-center {
+.loader {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.bottom-splash {
+    margin-top: 5rem;
+}
+.top-splash {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 15rem;
+}
+.top-splash img:nth-of-type(1) {
+    margin-left: -13rem;
+    margin-top: -2rem
+}
+.top-splash img:nth-of-type(2) {
+    margin-left: -1rem;
+    margin-top: -7rem
+}
+.top-splash img:nth-of-type(3) {
+    margin-left: -1rem;
+    margin-top: -10rem
+}
+.top-splash img:nth-of-type(4) {
+    margin-right: -7rem;
+    margin-top: -2rem
+}
+
+.bottom-splash img:nth-of-type(1) {
+    margin-right: -30rem;
+    margin-bottom: -2rem
+}
+.bottom-splash img:nth-of-type(2) {
+    /* margin-left: -5rem; */
+    margin-bottom: -7rem
+}
+.bottom-splash img:nth-of-type(3) {
+    margin-left: 5rem;
+    margin-bottom: 4rem
+}
+.bottom-splash img:nth-of-type(4) {
+    margin-right: -5rem;
+    margin-bottom: 0rem
 }
 
 .bottom-splash {
@@ -14,19 +57,20 @@
     align-items: center;
 }
 
+
 .loading-img {
    width: 44.8px;
    height: 44.8px;
    border-radius: 50%;
-   margin-top: -33.6px;
+   margin-bottom: 6rem;
    display: flex;
    justify-content: center;
    overflow: hidden;
    transform-origin: 50% 116.5%;
-   animation: colorful-253w2v 2s infinite linear;
+   animation: loading-img-253w2v 2s infinite linear;
 }
 
-.colorful:before {
+.loading-img:before {
    content: "";
    min-width: 233%;
    height: 233%;
@@ -40,7 +84,7 @@
    animation-direction: reverse;
 }
 
-@keyframes colorful-253w2v {
+@keyframes loading-img-253w2v {
    100% {
       transform: rotate(360deg);
    }
