--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -3,11 +3,14 @@ nav {
     justify-content: space-around;
     align-items: center;
     padding: 3rem 0;
-    position: absolute;
+    position: fixed;
     bottom: 0;
-    left: 0;
-    right: 0;
-    /* top: 0; */
+    width: 100%;
+    height: 5px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 2.5rem 2.5rem 0 0;
+    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
+    /* margin-bottom: 1rem; */
 }
 .navSearch, .navHome, .navUpload, .navProfile {
     text-align: center;
