--- a/frontend/src/components/EditProfileImage/EditProfileImage.css
+++ b/frontend/src/components/EditProfileImage/EditProfileImage.css
@@ -1,7 +1,7 @@
 .edit-profile-image-section {
   width: 100%;
   height: 14rem;
-  margin-bottom: 30rem;
+  margin-bottom: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -13,7 +13,7 @@
   position: relative;
 }
 
-.edit-profile-image-section .image-container .image {
+.edit-profile-image-section .image-container .user-image {
   width: 14rem;
   height: 14rem;
   border-radius: 15rem;
@@ -30,17 +30,11 @@
   right: 0.7rem;
 }
 
-.edit-profile-image-section .image-container .image-edit-btn img {
-  width: 100%;
-  height: 100%;
-}
-
 .edit-profile-image-section .image-container .inputfile {
-  width: 30rem;
-  height: 5rem;
-  margin-bottom: 2rem;
-  /* position: absolute;
-  left: 0;
-  z-index: 1;
-  opacity: 1; */
+  width: 3.5rem;
+  height: 3.5rem;
+  position: absolute;
+  bottom: 0;
+  right: 0.7rem;
+  opacity: 0;
 }
