--- a/frontend/src/components/HomeUserItem/HomeUserItem.css
+++ b/frontend/src/components/HomeUserItem/HomeUserItem.css
@@ -5,10 +5,22 @@
   object-fit: cover;
 }
 
-.likes-wrapper {
-  display: flex;
-}
-
+.likes-wrapper,
 .comments-wrapper {
   display: flex;
+  gap: 0.8rem;
+  align-items: center;
+}
+.comments-icon,
+.heart-icon {
+  width: 2.4rem;
+}
+
+.post-detail-likes-and-comments {
+  display: flex;
+  gap: 2.4rem;
+  padding: 1.2rem 0;
+  border-bottom: 0.1rem solid var(--color-stroke);
+
+  margin: 0 0 1.2rem 0;
 }
