--- a/frontend/src/components/SignBtn/SignBtn.css
+++ b/frontend/src/components/SignBtn/SignBtn.css
@@ -1,10 +1,12 @@
 button {
   margin-left: 1rem;
   margin-right: 2rem;
-  padding: 1rem;
+  margin-top: 3rem;
+  padding: 1.5rem;
   border-radius: 20px;
-  width: 96%;
+  width: 94%;
   background-color: #e98090;
   border: none;
   color: white;
+  cursor: pointer;
 }
