--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -92,6 +92,18 @@ p {
   padding: 1rem 2rem;
 }
 
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 @media only screen and (max-width: 428px) {
   .mobile-only {
     display: none;
