--- a/frontend/src/components/HomeUserItem/HomeUserItem.css
+++ b/frontend/src/components/HomeUserItem/HomeUserItem.css
@@ -1,26 +1,20 @@
-.post-image {
-  max-width: 100%;
+.home-user-item {
+  width: 100%;
+  margin-bottom: 2rem;
+}
+
+.home-user-item .post-image {
+  width: 100%;
   border-radius: 10%;
   aspect-ratio: 1;
   object-fit: cover;
+  margin-bottom: 1rem;
 }
 
-.likes-wrapper,
-.comments-wrapper {
+.home-user-item .home-user-item-bottom {
+  width: 100%;
+  height: 3rem;
   display: flex;
-  gap: 0.8rem;
   align-items: center;
-}
-.comments-icon,
-.heart-icon {
-  width: 2.4rem;
-}
-
-.post-detail-likes-and-comments {
-  display: flex;
-  gap: 2.4rem;
-  padding: 1.2rem 0;
-  border-bottom: 0.1rem solid var(--color-stroke);
-
-  margin: 0 0 1.2rem 0;
+  justify-content: flex-start;
 }
