--- a/frontend/src/components/SearchInput/SearchInput.css
+++ b/frontend/src/components/SearchInput/SearchInput.css
@@ -1,24 +1,26 @@
 .searchBar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 2rem;
 }
 
 .searchInput {
-    border: 0;
-    border-radius: 1.5rem;
-    height: 5rem;
-    width: 39rem;
-    background: url(../../images//Searchlogo.png) no-repeat left;
-    background-position: 15px center;
-    text-indent: 5rem;
-    background-color: rgba(128, 128, 128, 0.136);
-    font-family: "UrbanistSemiBold";
-    font-size: 1.4rem;
-    color:var(--color-text) ;
-    outline: none;
+  border: 0;
+  border-radius: 1.5rem;
+  height: 5rem;
+  width: 39rem;
+  background: url(../../images//Searchlogo.png) no-repeat left;
+  background-position: 15px center;
+  text-indent: 5rem;
+  background-color: rgba(128, 128, 128, 0.136);
+  font-family: "UrbanistSemiBold";
+  font-size: 1.4rem;
+  color: var(--color-text);
+  outline: none;
+  margin-bottom: 1rem;
 }
 
-.searchInput[type=text]:focus {
-    border: 3px solid var(--color-pink);
+.searchInput[type="text"]:focus {
+  border: 3px solid var(--color-pink);
 }
