--- a/frontend/src/pages/Comments/Comments.css
+++ b/frontend/src/pages/Comments/Comments.css
@@ -3,16 +3,45 @@
   justify-content: space-between;
   align-items: center;
   padding: 2.4rem 0;
+  animation: fade-in 1s;
 }
-.comments-header-left {
+.comments-header .comments-header-left {
   display: flex;
   gap: 1.6rem;
 }
 
-.post-detail-article {
+.post-detail-section {
+  width: 100%;
+  margin-bottom: 2rem;
   display: flex;
+  align-items: flex-start;
+  justify-content: center;
   flex-direction: column;
-  gap: 1rem;
-  border-top: 0.1rem solid var(--color-stroke);
-  padding: 1.2rem 0 0 0;
+  animation: fade-in 1s;
+}
+
+.post-detail-section .post-detail-article {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.post-detail-section .post-detail-article .hashtags {
+  color: var(--color-blue-hashtag);
+}
+
+.post-detail-section .post-detail-article .caption,
+.post-detail-section .post-detail-article .hashtags,
+.post-detail-section .post-detail-article .profession {
+  margin-bottom: 1rem;
+}
+
+.post-detail-section .post-detail-article .post-detail-likes-and-comments {
+  width: 100%;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
