--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -1,7 +1,5 @@
 .profile-section {
-  width: 90%;
   margin: 0 auto;
-  padding-top: 3rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,15 +19,12 @@
   margin-bottom: 0;
 }
 
-.profile-section .image {
+.profile-section .profile-image {
   width: 12rem;
   height: 12rem;
   border-radius: 15rem;
   margin-bottom: 1rem;
-  background-color: red;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  object-fit: cover;
 }
 
 .profile-section h2,
@@ -129,17 +124,15 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   flex-wrap: wrap;
   gap: 0.5rem;
 }
 
-.profile-section .profile-bottom .profile-bottom-gallery .placeholder-image {
-  width: 12.4rem;
-  height: 12.4rem;
+.profile-section .profile-bottom .profile-bottom-gallery .post-image {
+  width: 32.3%;
   border-radius: 0.5rem;
-  background-color: gray;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  object-fit: cover;
+  aspect-ratio: 1;
+  cursor: pointer;
 }
