--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -98,7 +98,7 @@ input {
 .wrapper {
   max-width: 428px;
   margin: 0 auto;
-  padding: 1rem 1.8rem;
+  padding: 1rem 1.8rem 7rem 1.8rem;
 }
 
 @keyframes fade-in {
