--- a/frontend/src/pages/Upload/Upload.css
+++ b/frontend/src/pages/Upload/Upload.css
@@ -11,8 +11,8 @@
 
 .upload-window {
   margin: 0 auto;
-  height: 37.5rem;
-  width: 37.5rem;
+  aspect-ratio: 1;
+  width: 100%;
   background-color: var(--color-grey-upload);
   border-radius: 32px;
   display: flex;
@@ -48,11 +48,10 @@ input[type="file"]::file-selector-button {
   flex-direction: column;
 }
 .img-gallery {
-  /* background-color: rgb(203, 184, 184); */
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 0.5rem;
   margin: 2.5rem auto;
 }
@@ -75,8 +74,8 @@ input[type="file"]::file-selector-button {
 }
 
 .img-gallery img {
-  height: 12rem;
-  width: 12rem;
+  width: 32.32%;
+  aspect-ratio: 1;
   object-fit: cover;
   border-radius: 10% / 10%;
 }
