--- a/frontend/src/components/MoreMenu/MoreMenu.css
+++ b/frontend/src/components/MoreMenu/MoreMenu.css
@@ -1,13 +1,21 @@
-@font-face {
-  font-family: Urbanist-Light;
-  src: url(../../fonts/Urbanist-Light.ttf);
+
+.more-menu-menu {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background-color: white ;
+  width: 100%;
+  height: 38rem;
+  border-radius: 5% 5% 0 0;
+  z-index: 5;
+  animation: fade-in 0.5s;
 }
 
 .stroke {
-  display: block;
-  margin: auto;
+  display: flex;
+  margin: 1.5rem auto;
   width: 12%;
-  height: 4px;
+  height: 3px;
 }
 
 .set,
@@ -19,13 +27,8 @@
 .heart,
 .info {
   display: flex;
+  align-items: center;
+  justify-content: left;
   gap: 2rem;
-  margin-top: 1rem;
-}
-
-h5 {
-  margin-top: 0.9rem;
-  font-family: "Urbanist-Light";
-  font-size: 13px;
-  color: black;
+  margin: 1.5rem 0 0 2rem ;
 }
