--- a/frontend/src/components/SearchInput/SearchInput.css
+++ b/frontend/src/components/SearchInput/SearchInput.css
@@ -2,13 +2,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 2rem 0 1rem 0;
 }
 
 .searchInput {
     border: 0;
     border-radius: 1.5rem;
     height: 5rem;
-    width: 39rem;
+    width: 36.5rem;
     background: url(../../images//Searchlogo.png) no-repeat left;
     background-position: 15px center;
     text-indent: 5rem;
