--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -110,3 +110,15 @@ p {
     justify-content: center;
   }
 }
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
