--- a/frontend/src/pages/Upload/Upload.css
+++ b/frontend/src/pages/Upload/Upload.css
@@ -1,8 +1,12 @@
+.upload-page {
+    animation: fade-in 1s;
+}
+
 .new-post {
     display: flex;
     justify-content:left;
     align-items:center;
-    padding: 0 2.5rem;
+    /* padding: 0 2.5rem; */
     margin: 2rem 0;
 }
 .cancelBtn {
@@ -69,7 +73,8 @@ input[type=file]::file-selector-button {
 
 .gallery-arrow {
     display: flex;
-    gap: 1rem
+    gap: 1rem;
+    cursor: pointer;
 }
 
 .gallery-arrow img {
@@ -96,6 +101,7 @@ input[type=file]::file-selector-button {
 
 .popup {
     padding: 1rem;
+    animation: fade-in 1s;
 }
 
 .backBtn-popup {
@@ -114,7 +120,7 @@ input[type=file]::file-selector-button {
 .caption-upload-img {
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
 }
 .profile-upload-img {
     width: 7.5rem;
@@ -125,24 +131,26 @@ input[type=file]::file-selector-button {
 }
 
 .caption-input {
-    height: 6rem;
-    /* width: 30rem; */
-    width: 100%;
+    width: 20rem;
     background-color: rgba(128, 128, 128, 0.074);
     border-radius: 1.5rem;
     border: 0;
-    text-indent: 2rem;
+    padding: 2rem 1rem;
     outline: none;
     font-family: "UrbanistSemiBold";
     font-size: 1.4rem;
     cursor: pointer;
+    height: auto;
+    min-height: 6rem;
+    overflow: hidden;
+    resize: none;
 }
 
-.caption-input[type=text]:focus {
+.caption-input:focus {
     border: 2px solid rgba(128, 128, 128, 0.074);
 }
 .new-post-img {
-    width: 12rem;
+    width: 7.5rem;
     height: 7.5rem;
     border-radius: 1rem;
     object-fit: cover;
@@ -202,3 +210,18 @@ input[type=file]::file-selector-button {
     cursor: pointer;
 }
 
+.post-upload-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.post-btn-upload {
+    width: 60%;
+    height: 4.5rem;
+    margin-top: 2rem;
+    background-color: var(--color-pink-bright);
+    color: white;
+    border: none;
+    border-radius: 10rem;
+}
