--- a/frontend/src/components/SearchItem/SearchItem.css
+++ b/frontend/src/components/SearchItem/SearchItem.css
@@ -25,9 +25,9 @@
 }
 
 .search-item .search-item-text {
-  width: 21.5rem;
+  width: 100%;
   height: 100%;
-  padding-left: 1rem;
+  padding-left: 2rem;
   display: flex;
   align-items: flex-start;
   justify-content: center;
@@ -35,7 +35,7 @@
 }
 
 .search-item .follow {
-  width: 7.3rem;
+  width: 10rem;
   height: 3.2rem;
   background-color: var(--color-pink-bright);
   color: white;
@@ -45,17 +45,21 @@
   align-items: center;
   justify-content: center;
   transition: all 0.3s;
+  letter-spacing: 0.05rem;
+  padding: 0 2rem;
 }
 
 .search-item .following {
-  width: 9.3rem;
+  width: 14rem;
   height: 3.2rem;
   background-color: white;
   color: var(--color-pink-bright);
-  border: 1px solid var(--color-pink-bright);
+  border: 2px solid var(--color-pink-bright);
   border-radius: 5rem;
   display: flex;
   align-items: center;
   justify-content: center;
   transition: all 0.3s;
+  padding: 0 2rem;
+  letter-spacing: 0.05rem;
 }
