--- a/frontend/src/components/MoreMenu/MoreMenu.css
+++ b/frontend/src/components/MoreMenu/MoreMenu.css
@@ -1,11 +1,10 @@
-
 .more-menu-menu {
   position: fixed;
   bottom: 0;
   left: 0;
-  background-color: white ;
+  background-color: white;
   width: 100%;
-  height: 38rem;
+  height: 47.5rem;
   border-radius: 5% 5% 0 0;
   z-index: 5;
   animation: fade-in 0.5s;
@@ -26,9 +25,18 @@
 .closing,
 .heart,
 .info {
+  width: 38rem;
+  height: 2.8rem;
+  margin-left: 2rem;
+  margin-bottom: 2.25rem;
   display: flex;
   align-items: center;
-  justify-content: left;
-  gap: 2rem;
-  margin: 1.5rem 0 0 2rem ;
+  justify-content: flex-start;
+}
+
+.more-menu-menu img {
+  width: 2.8rem;
+  height: 2.8rem;
+  margin-right: 2rem;
+  object-fit: contain;
 }
