--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -75,11 +75,32 @@
   border: none;
   border-radius: 10rem;
   font-size: 1.8rem;
+  transition: all 0.3s;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-section .following-btn {
+  width: 38rem;
+  height: 4.5rem;
+  margin-bottom: 2rem;
+  background-color: white;
+  color: var(--color-pink-bright);
+  border: 1px solid var(--color-pink-bright);
+  border-radius: 10rem;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .profile-section .follow-btn img {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 2rem;
+  height: 2rem;
   object-fit: contain;
   margin-right: 1rem;
 }
