--- a/frontend/src/components/MoreMenu/MoreMenu.css
+++ b/frontend/src/components/MoreMenu/MoreMenu.css
@@ -1,14 +1,16 @@
 
 .more-menu-menu {
   position: fixed;
+  transition: bottom .04s ease-in-out;
   bottom: 0;
   left: 0;
   background-color: white ;
   width: 100%;
   height: 38rem;
   border-radius: 5% 5% 0 0;
-  z-index: 5;
+  z-index: 12;
   animation: fade-in 0.5s;
+
 }
 
 .stroke {
@@ -29,6 +31,35 @@
   display: flex;
   align-items: center;
   justify-content: left;
-  gap: 2rem;
+  width: 100%;
+  gap: 4rem;
   margin: 1.5rem 0 0 2rem ;
 }
+
+.more-menu-menu {
+  animation: slideIn ease-in-out 0.35s;
+  animation-fill-mode: forwards; 
+}
+
+@keyframes slideIn {
+  0% {
+    bottom: -400px
+  }
+  100% {
+    bottom: -25px
+  }
+}
+.slide-out-menu {
+  animation: slideOut ease-in-out 0.35s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes slideOut {
+  0% {
+    bottom: -25px;
+  }
+  100% {
+    bottom: -400px;
+  }
+}
+
