--- a/frontend/src/components/CommentInput/CommentInput.css
+++ b/frontend/src/components/CommentInput/CommentInput.css
@@ -1,24 +1,46 @@
 .comment-input-form {
   width: 100%;
-  height: 13rem;
+  height: 10rem;
+  padding: 4rem 2rem 5rem 2rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-radius: 2.5rem 2.5rem 0 0;
+  box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  margin-left: 0rem;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  animation: fade-in 1s;
 }
 
 .comment-input-form .comment-input {
   width: 70%;
-  height: 5.6rem;
+  height: 4.6rem;
   border: none;
   border-radius: 1rem;
   background-color: var(--color-grey-bg);
   padding-left: 1rem;
+  resize: none;
+  overflow-y: auto;
+  padding: 1.5rem 1rem;
+  outline: none;
+  font-family: "UrbanistMedium";
+}
+.post-btn {
+  font-family: "UrbanistBold";
+}
+
+.comment-input:focus {
+  border: 2px solid var(--color-pink);
+  background-color: #e9809018;
 }
 
 .comment-input-form .post-btn {
   width: 3.5rem;
   height: 2.5rem;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   display: flex;
   align-items: center;
   justify-content: center;
