--- a/frontend/src/components/SearchInput/SearchInput.css
+++ b/frontend/src/components/SearchInput/SearchInput.css
@@ -1,15 +1,17 @@
+
 .searchBar {
   display: flex;
   justify-content: center;
   align-items: center;
   padding-top: 2rem;
+  padding-bottom: 1rem;
 }
 
 .searchInput {
   border: 0;
   border-radius: 1.5rem;
   height: 5rem;
-  width: 39rem;
+  width: 90%;
   background: url(../../images//Searchlogo.svg) no-repeat left;
   background-position: 15px center;
   text-indent: 5rem;
