--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -93,7 +93,7 @@ p {
 
 small {
   font-family: "UrbanistRegular";
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   margin: 3rem 0 0 0;
   text-align: center;
   display: block;
@@ -107,6 +107,17 @@ input {
   max-width: 428px;
   margin: 0 auto;
   padding: 1rem 1.8rem 7rem 1.8rem;
+}
+
+.nav-fixed-wrapper {
+  position: fixed;
+  background-color: white;
+  top: 50px;
+  width: 100%;
+  left: 0;
+  z-index: 5;
+  /* box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.031); */
+  animation: fade-in 1s;
 }
 
 @keyframes fade-in {
