--- a/frontend/src/pages/EditProfile/EditProfile.css
+++ b/frontend/src/pages/EditProfile/EditProfile.css
@@ -5,6 +5,10 @@
   animation: fade-in 1s;
 }
 
+.edit-profile-section-top {
+  padding: 0 2rem;
+}
+
 .edit-profile-section .edit-profile-section-top {
   width: 100%;
   height: 4.8rem;
