--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -1,13 +1,15 @@
+
 .home-section-top {
   width: 100%;
-  height: 5rem;
-  margin-bottom: 1.5rem;
+  height: 4rem;
+  margin: 2rem 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
   animation: fade-in 1s;
+  padding-left: 2rem;
+  
 }
-
 .home-section-top .home-section-top-left {
   display: flex;
   align-items: center;
@@ -29,4 +31,6 @@
   width: 2.8rem;
   height: 2.8rem;
   object-fit: contain;
+  position: absolute;
+  right: 19.5px;
 }
