--- a/frontend/src/pages/Comments/Comments.css
+++ b/frontend/src/pages/Comments/Comments.css
@@ -1,25 +1,27 @@
 .comments-header {
+  width: 100%;
+  height: 4.8rem;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   padding: 2.4rem 0rem 1.6rem 0rem;
   animation: fade-in 1s;
-  
 }
 
 .comments-header-left {
   padding: 0 2rem;
 }
 
-.comments-header .share-img{
-  position: absolute;
-  left: 375px;
+.comments-header .share-img {
   width: 3.5rem;
+  height: 3.5rem;
+  object-fit: contain;
+  margin-right: 2rem;
 }
+
 .comments-header .comments-header-left {
   display: flex;
   gap: 1.6rem;
-  /* padding-left: 2rem; */
 }
 
 .post-detail-section {
