--- a/frontend/src/components/EditProfileInfo/EditProfileInfo.css
+++ b/frontend/src/components/EditProfileInfo/EditProfileInfo.css
@@ -24,17 +24,16 @@
 }
 
 .edit-profile-info-section form .update-btn {
-  padding: 0;
+  width: 90%;
   height: 5.6rem;
   margin: 0 auto;
-  border-radius: 50rem;
+  border: none;
+  border-radius: 5rem;
   background-color: var(--color-pink-bright);
   color: white;
-  font-size: 1.6rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "UrbanistRegular";
 }
 
 .edit-profile-info-section form input:focus {
