--- a/frontend/src/components/Likes/Likes.css
+++ b/frontend/src/components/Likes/Likes.css
@@ -1,5 +1,4 @@
 .likes-wrapper {
-  width: 8rem;
   height: 3rem;
   display: flex;
   align-items: center;
@@ -9,4 +8,5 @@
 .likes-wrapper .heart-icon {
   margin-right: 1rem;
   width: 2.4rem;
+  cursor: pointer;
 }
