--- a/frontend/src/pages/Comments/Comments.css
+++ b/frontend/src/pages/Comments/Comments.css
@@ -4,14 +4,13 @@
   align-items: center;
   padding: 2.4rem 0rem 1.6rem 0rem;
   animation: fade-in 1s;
-  
 }
 
 .comments-header-left {
   padding: 0 2rem;
 }
 
-.comments-header .share-img{
+.comments-header .share-img {
   position: absolute;
   left: 375px;
   width: 3.5rem;
@@ -57,4 +56,5 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  gap: 2rem;
 }
