--- a/frontend/src/pages/SignUp/SignUp.css
+++ b/frontend/src/pages/SignUp/SignUp.css
@@ -52,8 +52,8 @@ form {
 }
 
 .hide {
-  margin-left: 33rem;
-  margin-top: -6rem;
+  margin-left: 88%;
+  margin-top: -5.9rem;
 }
 .hide img {
   width: 2.5rem;
