--- a/frontend/src/components/EditProfileInfo/EditProfileInfo.css
+++ b/frontend/src/components/EditProfileInfo/EditProfileInfo.css
@@ -35,6 +35,7 @@
   align-items: center;
   justify-content: center;
   font-family: "UrbanistRegular";
+  cursor: pointer;
 }
 
 .edit-profile-info-section form input:focus {
