--- a/frontend/src/components/MoreMenu/MoreMenu.css
+++ b/frontend/src/components/MoreMenu/MoreMenu.css
@@ -5,7 +5,7 @@
   left: 0;
   background-color: white;
   width: 100%;
-  height: 47.5rem;
+  height: 50.5rem;
   border-radius: 5% 5% 0 0;
   z-index: 12;
   animation: fade-in 0.5s;
@@ -35,6 +35,17 @@
   justify-content: flex-start;
 }
 
+.logout-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 2rem;
+  color: var(--color-pink-bright);
+  cursor: pointer;
+}
+.logout-btn:active {
+  color: var(--color-pink)
+}
 .more-menu-menu .more-menu-icon {
   width: 2.8rem;
   height: 2.8rem;
@@ -49,7 +60,7 @@
 
 @keyframes slideIn {
   0% {
-    bottom: -400px;
+    bottom: -800px;
   }
   100% {
     bottom: -25px;
@@ -65,6 +76,6 @@
     bottom: -25px;
   }
   100% {
-    bottom: -400px;
+    bottom: -500px;
   }
 }
