--- a/frontend/src/pages/Upload/Upload.css
+++ b/frontend/src/pages/Upload/Upload.css
@@ -22,18 +22,39 @@
   margin-bottom: 1rem;
   margin-top: 12rem;
 }
-.custom-file-upload {
-  display: flex;
-  align-self: center;
+
+.custom-upload-btn {
   margin: 0 auto;
-  width: 160px;
-  border-radius: 5px;
-  text-align: center;
-  cursor: pointer;
-  color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#custom-file-upload {
+  display: none;
 }
 
-input[type="file"]::file-selector-button {
+#file-input-label {
+  width: 30rem;
+  height: 5.5rem;
+  border: 1px solid var(--color-pink-bright);
+  border-radius: 30px;
+  font-size: 1.8rem;
+  font-family: "UrbanistSemiBold";
+  color: white;
+  text-align: center;
+  padding-top: 1.7rem;
+  cursor: pointer;
+  background: url(../../images/WhiteCamera.svg) no-repeat left;
+  background-position: 8.5rem;
+  background-color: var(--color-pink-bright);
+}
+
+#file-input-label:active {
+  background-color: #ff4d6871;
+  transition: all 0.3s;
+}
+
+/* input[type="file"]::file-selector-button {
   padding: 1.2rem 0.4em;
   border-radius: 20rem;
   width: 160px;
@@ -41,7 +62,7 @@ input[type="file"]::file-selector-button {
   color: white;
   cursor: pointer;
   border: none;
-}
+} */
 
 /* gallery */
 
