--- a/frontend/src/pages/UserProfile/UserProfile.css
+++ b/frontend/src/pages/UserProfile/UserProfile.css
@@ -10,6 +10,9 @@
 .user-profile-top {
   padding: 0 2rem;
 }
+.user-profile-top-buttons {
+  cursor: pointer;
+}
 
 .user-profile-section .user-profile-top {
   width: 100%;
@@ -163,6 +166,9 @@
 .user-profile-header-left {
   display: flex;
   gap: 1rem;
+}
+.user-profile-header-left img {
+  cursor: pointer;
 }
 
 .gray-background {
