some corrections for mobile simulator

--- a/frontend/src/components/HomeUserList/HomeUserList.css
+++ b/frontend/src/components/HomeUserList/HomeUserList.css
@@ -1,5 +1,6 @@
 .home-user-list-section {
   width: 100%;
   animation: fade-in 1s;
-  margin-top: 12rem;
+  margin-top: 9rem;
+  /* margin-top: 12rem; */
 }
