--- a/frontend/src/components/EditProfileImage/EditProfileImage.css
+++ b/frontend/src/components/EditProfileImage/EditProfileImage.css
@@ -5,7 +5,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 10rem;
+  margin-top: 7rem;
+  /* margin-top: 10rem; --> without mobile simulator */
 }
 
 .edit-profile-image-section .image-container {
