--- a/frontend/src/components/MoreMenu/MoreMenu.css
+++ b/frontend/src/components/MoreMenu/MoreMenu.css
@@ -5,7 +5,7 @@
   left: 0;
   background-color: white;
   width: 100%;
-  height: 50.5rem;
+  height: 51.5rem;
   border-radius: 5% 5% 0 0;
   z-index: 12;
   animation: fade-in 0.5s;
@@ -39,12 +39,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 2rem;
+  padding-bottom: 4rem;
   color: var(--color-pink-bright);
   cursor: pointer;
 }
 .logout-btn:active {
-  color: var(--color-pink)
+  color: var(--color-pink);
 }
 .more-menu-menu .more-menu-icon {
   width: 2.8rem;
