--- a/frontend/src/components/SearchList/SearchList.css
+++ b/frontend/src/components/SearchList/SearchList.css
@@ -12,5 +12,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 13rem;
+  margin-top: 9rem;
+  /* margin-top: 13rem; --> without mobile simulator */
 }
