--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -109,21 +109,34 @@ input {
   font-family: "UrbanistRegular";
 }
 
+/* wrapper for mobile simulator extension */
 .wrapper {
   max-width: 428px;
   margin: 0 auto;
-  padding: 1rem 1.8rem 7rem 1.8rem;
+  padding: 1rem 1.8rem 9rem 1.8rem;
 }
+
+/* without mobile simulator */
+/* .wrapper {
+  max-width: 428px;
+  margin: 0 auto;
+  padding: 1rem 1.8rem 7rem 1.8rem;
+} */
 
 .nav-fixed-wrapper {
   position: fixed;
   background-color: white;
-  top: 50px;
+  height: 10rem;
+  top: -0.2rem;
+  /* top: 50px; --> without mobile simulator */
   width: 100%;
   left: 0;
   z-index: 5;
   /* box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.031); */
   animation: fade-in 1s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 @keyframes fade-in {
