--- a/frontend/src/pages/EditProfile/EditProfile.css
+++ b/frontend/src/pages/EditProfile/EditProfile.css
@@ -12,7 +12,7 @@
 .edit-profile-section .edit-profile-section-top {
   width: 100%;
   height: 4.8rem;
-  margin-bottom: 2rem;
+  /* margin-bottom: 2rem; --> without mobile simulator */
   display: flex;
   align-items: center;
   justify-content: flex-start;
