--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -13,7 +13,7 @@
 .profile-section .profile-top {
   width: 100%;
   height: 4.8rem;
-  margin-bottom: 2rem;
+  /* margin-bottom: 2rem; --> without mobile simulator */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -24,7 +24,8 @@
 }
 
 .profile-image {
-  margin-top: 12rem;
+  margin-top: 9rem;
+  /* margin-top: 12rem; --> without mobile simulator */
 }
 .profile-section .profile-image {
   width: 12rem;
