--- a/frontend/src/components/BackBtn/BackBtn.css
+++ b/frontend/src/components/BackBtn/BackBtn.css
@@ -1,5 +1,7 @@
 .backBtn {
   display: flex;
+  align-items: center;
+  justify-content: center;
   /* padding: 2rem 0 0 0; */
   background: none;
   border: none;
