--- a/frontend/src/components/CommentList/CommentList.css
+++ b/frontend/src/components/CommentList/CommentList.css
@@ -5,5 +5,5 @@
   justify-content: flex-start;
   flex-direction: column;
   animation: fade-in 1s;
-  margin-bottom: 3rem;
+  padding-bottom: 10rem;
 }
