--- a/frontend/src/components/LoadingScreen/LoadingScreen.css
+++ b/frontend/src/components/LoadingScreen/LoadingScreen.css
@@ -1,19 +1,19 @@
 .loadingscreen-wrapper {
-  margin-top: 20rem;
+  padding: 15vh 3rem 0 3rem;
+  height: 96vh;
+  overflow: hidden;
 }
 
 .landing {
   display: block;
   margin: auto;
-  height: 36rem;
-  width: 36rem;
-  /* height: 260px; */
+  width: 100%;
 }
 
 .loading {
   display: block;
   margin: auto;
-  margin-top: 15rem;
+  margin-top: 18vh;
   align-items: center;
   width: 50px;
   height: 50px;
