--- a/frontend/src/pages/UserProfile/UserProfile.css
+++ b/frontend/src/pages/UserProfile/UserProfile.css
@@ -7,6 +7,7 @@
   animation: fade-in 1s;
   margin-top: 9rem;
   /* margin-top: 12rem; --> without mobile simulator */
+  padding-bottom: 8rem;
 }
 .user-profile-top {
   padding: 0 2rem;
