--- a/frontend/src/components/SearchItem/SearchItem.css
+++ b/frontend/src/components/SearchItem/SearchItem.css
@@ -52,7 +52,7 @@
 .search-item .following {
   width: 14rem;
   height: 3.2rem;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0);
   color: var(--color-pink-bright);
   border: 2px solid var(--color-pink-bright);
   border-radius: 5rem;
