--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -1,4 +1,5 @@
-.nav-light {
+.nav-light,
+.nav-dark {
   display: flex;
   justify-content: space-around;
   align-items: flex-end;
@@ -8,29 +9,17 @@
   left: 0;
   width: 100%;
   height: 8rem;
-  background-color: rgb(255, 255, 255);
   border-radius: 2.5rem 2.5rem 0 0;
   box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
-  /* margin-bottom: 1rem; */
   transition: all 0.3s;
 }
 
+.nav-light {
+  background-color: rgb(255, 255, 255);
+}
+
 .nav-dark {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 3rem 0;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 5px;
   background-color: var(--color-darkmode);
-  color: white;
-  border-radius: 2.5rem 2.5rem 0 0;
-  box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
-  /* margin-bottom: 1rem; */
-  transition: all 0.3s;
 }
 
 .navSearch,
