--- a/frontend/src/components/CommentInput/CommentInput.css
+++ b/frontend/src/components/CommentInput/CommentInput.css
@@ -32,8 +32,7 @@
   animation: fade-in 1s;
 }
 
-.comment-input-form-light .comment-input,
-.comment-input-form-dark .comment-input {
+.comment-input-form-light .comment-input-light {
   width: 70%;
   height: 4.6rem;
   border: none;
@@ -47,11 +46,27 @@
   font-family: "UrbanistMedium";
 }
 
+.comment-input-form-dark .comment-input-dark {
+  width: 70%;
+  height: 4.6rem;
+  border: none;
+  border-radius: 1rem;
+  background-color: rgba(128, 128, 128, 0.136);
+  color: var(--color-grey-upload);
+  padding-left: 1rem;
+  resize: none;
+  overflow-y: auto;
+  padding: 1.3rem 1rem;
+  outline: none;
+  font-family: "UrbanistMedium";
+}
+
 .post-btn {
   font-family: "UrbanistBold";
 }
 
-.comment-input:focus {
+.comment-input-dark:focus,
+.comment-input-light:focus {
   border: 2px solid var(--color-pink);
   background-color: #e9809018;
 }
@@ -77,7 +92,7 @@
   align-items: center;
   justify-content: center;
   border: none;
-  background-color: rgb(70, 70, 70);
+  background-color: var(--color-darkmode);
   color: var(--color-pink-bright);
   cursor: pointer;
 }
