--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -75,7 +75,7 @@
   background-color: #eeeeee;
 }
 
-.profile-section .follow-btn {
+.profile-section .follow-btn-light {
   width: 95%;
   height: 4.5rem;
   margin-bottom: 2rem;
@@ -91,7 +91,7 @@
   justify-content: center;
 }
 
-.profile-section .following-btn {
+.profile-section .following-btn-light {
   width: 95%;
   height: 4.5rem;
   margin-bottom: 2rem;
@@ -107,13 +107,52 @@
   justify-content: center;
 }
 
-.profile-section .follow-btn img {
+.profile-section .follow-btn-dark {
+  width: 95%;
+  height: 4.5rem;
+  margin-bottom: 2rem;
+  background-color: var(--color-pink-bright);
+  color: var(--color-darkmode);
+  border: none;
+  border-radius: 10rem;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-section .following-btn-dark {
+  width: 95%;
+  height: 4.5rem;
+  margin-bottom: 2rem;
+  background-color: rgba(255, 255, 255, 0);
+  color: var(--color-pink-bright);
+  border: 2px solid var(--color-pink-bright);
+  border-radius: 10rem;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-section .follow-btn-light img {
   width: 2rem;
   height: 2rem;
   object-fit: contain;
   margin-right: 1rem;
+  fill: white;
 }
-
+.profile-section .follow-btn-dark img {
+  width: 2rem;
+  height: 2rem;
+  object-fit: contain;
+  margin-right: 1rem;
+  fill: var(--color-darkmode);
+}
 .profile-section .horizontal-line {
   width: 100%;
   height: 1px;
