--- a/frontend/src/pages/Upload/Upload.css
+++ b/frontend/src/pages/Upload/Upload.css
@@ -153,7 +153,25 @@
   margin-right: 1rem;
 }
 
-.caption-input {
+.caption-input-light {
+  width: 23rem;
+  background-color: rgba(128, 128, 128, 0.074);
+  border-radius: 1.5rem;
+  border: 0;
+  padding: 2rem 1rem;
+  outline: none;
+  font-family: "UrbanistSemiBold";
+  font-size: 1.4rem;
+  cursor: pointer;
+  height: auto;
+  min-height: 6rem;
+  overflow: hidden;
+  resize: none;
+  height: 1rem;
+}
+
+.caption-input-dark {
+  color: var(--color-grey-upload);
   width: 23rem;
   background-color: rgba(128, 128, 128, 0.074);
   border-radius: 1.5rem;
